--- a/index.html
+++ b/index.html
@@ -3,12 +3,24 @@
   ;background:#5E81AC;text-decoration:none;font-weight:700;border-radius:5px;padding:3px;}a:hover{background:#ECEFF4;color:#5E81AC}h2{color:#ECEFF4}h3{font-weight:500}ul{list-style-type:none;padding-left:0;}li{margin: 0 0 10px 0}img{border-radius:15px;max-width:200px}</style></head>
 <body>
 <h1>Dr. Doug Belshaw</h1>
-<h2><b>Open Strategist</h2>
+<h2>
+  <span id="typed"></span>
+    <div id="typed-strings">
+      <p><span class="highlight aqua">Consultant.</span></p>
+      <p><span class="highlight green">Keynote speaker.</span></p>
+      <p><span class="highlight yellow">Co-op founder</span></p>
+      <p><span class="highlight hot-pink">Tech sherpa.</span></p>
+      <p><span class="highlight blue">Writer.</span></p>
+      <p><span class="highlight grey">Researcher.</span></p>
+      <p><span class="highlight red">Leader.</span></p>
+			<p><span class="highlight purple">Open advocate.</span></p>
+    </div>
+</h2>
   <ul>
     <li>👋 <a href="/1024B/about">About</a>
     <li>✍️ <a href="https://dougbelshaw.com/blog">Blog</a> | <a href="https://thoughtshrapnel.com">Newsletter</a></li>
     <li>💬 <a href="http://fosstodon.org/@dajbelshaw">Mastodon</a> | <a href="https://twitter.com/dajbelshaw">Twitter</a></li>
     <li>🤝 <a href="https://www.linkedin.com/in/dajbelshaw">LinkedIn</a>
   </ul>
-<p></p>
+<script src="js/main.js"></script>
 </body></html>
