--- a/index.html
+++ b/index.html
@@ -1,23 +1,29 @@
-<!DOCTYPE html><head><meta content="width=device-width,initial-scale=1" name="viewport"><title>Dr. Doug Belshaw | Open Strategist</title><link rel="icon" href="data:">
-<style>html{font:22px sans-serif;padding:5%;background:#81A1C1;color:#fff}body{max-width:690px;margin:0 auto;line-height:1.5em}a{color:#FFF
-  ;background:#5E81AC;text-decoration:none;font-weight:700;border-radius:5px;padding:3px;}a:hover{background:#ECEFF4;color:#5E81AC}h2{color:#ECEFF4}h3{font-weight:500}ul{list-style-type:none;padding-left:0;}li{margin: 0 0 10px 0}img{border-radius:15px;max-width:200px}</style></head>
+<!DOCTYPE html>
+<head>
+	<meta content="width=device-width,initial-scale=1" name="viewport">
+	<title>Dr. Doug Belshaw | Open Strategist</title>
+	<link rel="shortcut icon" href="images/ico/favicon.ico">
+	<style>html{font:22px sans-serif;padding:5%;background:#81A1C1;color:#fff}body{max-width:690px;margin:0 auto;line-height:1.5em}a{color:#FFF
+  ;background:#5E81AC;text-decoration:none;font-weight:700;border-radius:5px;padding:3px;}a:hover{background:#ECEFF4;color:#5E81AC}h2{color:#ECEFF4}h3{font-weight:500}ul{list-style-type:none;padding-left:0;}li{margin: 0 0 10px 0}img{border-radius:15px;max-width:200px}
+	</style>
+</head>
 <body>
 <h1>Dr. Doug Belshaw</h1>
 <h2>
   <span id="typed"></span>
     <div id="typed-strings">
-      <p><span class="highlight aqua">Consultant.</span></p>
-      <p><span class="highlight green">Keynote speaker.</span></p>
-      <p><span class="highlight yellow">Co-op founder</span></p>
-      <p><span class="highlight hot-pink">Tech sherpa.</span></p>
-      <p><span class="highlight blue">Writer.</span></p>
-      <p><span class="highlight grey">Researcher.</span></p>
-      <p><span class="highlight red">Leader.</span></p>
-			<p><span class="highlight purple">Open advocate.</span></p>
+      <p>Consultant</p>
+      <p>Keynote speaker</p>
+      <p>Co-op founder</p>
+      <p>Tech sherpa</p>
+      <p>Writer</p>
+      <p>Researcher</p>
+      <p>Leader</p>
+      <p>Open advocate</p>
     </div>
 </h2>
   <ul>
-    <li>👋 <a href="/1024B/about">About</a>
+    <li>👋 <a href="/about">About</a>
     <li>✍️ <a href="https://dougbelshaw.com/blog">Blog</a> | <a href="https://thoughtshrapnel.com">Newsletter</a></li>
     <li>💬 <a href="http://fosstodon.org/@dajbelshaw">Mastodon</a> | <a href="https://twitter.com/dajbelshaw">Twitter</a></li>
     <li>🤝 <a href="https://www.linkedin.com/in/dajbelshaw">LinkedIn</a>
