--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<meta content="width=device-width,initial-scale=1" name="viewport">
 	<title>Dr. Doug Belshaw | Open Strategist</title>
 	<link rel="shortcut icon" href="images/ico/favicon.ico">
-	<style>html{font:22px sans-serif;padding:5%;background:#81A1C1;color:#fff}body{max-width:690px;margin:0 auto;line-height:1.5em}a{color:#FFF
+	<style>html{overflow: hidden;font:22px sans-serif;padding:5%;background:#81A1C1;color:#fff}body{max-width:690px;margin:0 auto;line-height:1.5em}a{color:#FFF
   ;background:#5E81AC;text-decoration:none;font-weight:700;border-radius:5px;padding:3px;}a:hover{background:#ECEFF4;color:#5E81AC}h2{color:#ECEFF4}h3{font-weight:500}ul{list-style-type:none;padding-left:0;}li{margin: 0 0 10px 0}img{border-radius:15px;max-width:200px}
 	</style>
 </head>
