--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
 </h2>
   <ul>
-    <li>👋 <a href="/about">About</a>
+    <li>👋 <a href="about/">About</a>
     <li>✍️ <a href="https://dougbelshaw.com/blog">Blog</a> | <a href="https://thoughtshrapnel.com">Newsletter</a></li>
     <li>💬 <a href="http://fosstodon.org/@dajbelshaw">Mastodon</a> | <a href="https://twitter.com/dajbelshaw">Twitter</a></li>
     <li>🤝 <a href="https://www.linkedin.com/in/dajbelshaw">LinkedIn</a>
