--- a/about/index.html
+++ b/about/index.html
@@ -12,6 +12,6 @@
   <p>One of these topics is decentralisation, which I also explored on a very practical basis as Product Manager of <a href="https://moodle.com/moodlenet/">MoodleNet</a>. This involved building a talented and diverse team to deliver the world's first federated, resource-centric, social network for educators.</p>
   <p>I'm trying to make the world a better place than I found it. If you're doing something similar <a href="mailto:contact@dougbelshaw.com">get in touch!</a></p>
   <hr />
-  <p>⬅️ <a href="/">Back</a></p>
+  <p>⬅️ <a href="../">Back</a></p>
 
 </body></html>
