--- a/index.html
+++ b/index.html
@@ -3,7 +3,23 @@
 	<meta content="width=device-width,initial-scale=1" name="viewport">
 	<title>Dr. Doug Belshaw | Open Strategist</title>
 	<link rel="shortcut icon" href="images/ico/favicon.ico">
-	<style>html{overflow:hidden;font:22px sans-serif;padding:5%;background:#81A1C1;color:#fff}body{max-width:690px;margin:0 auto;line-height:1.5em}a{color:#FFF;background:#5E81AC;text-decoration:none;font-weight:700;border-radius:5px;padding:3px}a:hover{background:#ECEFF4;color:#5E81AC}h2{color:#ECEFF4}h3{font-weight:500}ul{list-style-type:none;padding-left:0;}li{margin: 0 0 10px 0}img{border-radius:15px;max-width:200px}
+	<style>
+		html{overflow:hidden;font:22px sans-serif;padding:5%;background:#81A1C1;color:#fff}
+		body{max-width:690px;margin:0 auto;line-height:1.5em}
+		a{color:#FFF;background:#5E81AC;text-decoration:none;font-weight:700;border-radius:5px;padding:3px}
+		a:hover{background:#ECEFF4;color:#5E81AC}
+		h2{color:#ECEFF4}
+		h3{font-weight:500}
+		ul{list-style-type:none;padding-left:0;}
+		li{margin: 0 0 10px 0}
+		img{border-radius:15px;max-width:200px}
+		/* Loader */
+		html{overflow:hidden}
+		html.loaded{overflow:auto}
+		html:after{content:"";position:fixed;z-index:1000;top:0;left:0;right:0;bottom:0; background:#81A1C1}
+		html.loaded:after{display:none}
+		body{transition:all .6s cubic-bezier(0.77,0,0.175,1);opacity:0}
+		html.loaded body{opacity:1}
 	</style>
 </head>
 <body>
