--- a/speaking/index.html
+++ b/speaking/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 	<meta content="width=device-width,initial-scale=1" name="viewport">
-	<title>Dr. Doug Belshaw | Open Strategist</title>
+	<title>Speaking | Dr. Doug Belshaw | Open Strategist</title>
 	<link rel="shortcut icon" href="../img/favicon.ico">
 	<style>
 		html{overflow:hidden;font:22px sans-serif;padding:5%;background:#81A1C1;color:#fff}
