--- a/speaking/index.html
+++ b/speaking/index.html
@@ -4,7 +4,7 @@
 	<title>Speaking | Dr. Doug Belshaw | Open Strategist</title>
 	<link rel="shortcut icon" href="../img/favicon.ico">
 	<style>
-		html{overflow:hidden;font:22px sans-serif;padding:5%;background:#81A1C1;color:#fff}
+		html{font:22px sans-serif;padding:5%;background:#81A1C1;color:#fff}
 		body{max-width:690px;margin:0 auto;line-height:1.5em}
 		a{color:#FFF;background:#5E81AC;text-decoration:none;font-weight:700;border-radius:5px;padding:3px}
 		a:hover{background:#ECEFF4;color:#5E81AC}
@@ -40,6 +40,6 @@
 	</ul>
 </p>
   <hr />
-  <p>⬅️ <a href="/1024B">Back</a></p>
+  <p>⬅️ <a href="../">Back</a></p>
 
 </body></html>
