--- a/thesis/index.html
+++ b/thesis/index.html
@@ -33,6 +33,6 @@
   <p>I continue to consult and present on digital literacies and am particularly interested in how disinformation is propagated online &mdash; as I discussed in a keynote entitled <a href="https://dougbelshaw.com/speaking.html">Truth, Lies, and Digital Fluency</a>.</p>
  
   <hr>
-  <p>⬅️ <a href="/1024B">Back</a></p>
+  <p>⬅️ <a href="../">Back</a></p>
 
 </body></html>
