--- a/projects/index.html
+++ b/projects/index.html
@@ -23,6 +23,6 @@
   <p>🔥 <a href="https://extinction.fyi">Extinction.fyi</a> is an RSS feed styled as a web page documenting the climate emergency. The code repository can be found <a class="link-1 red" href="https://github.com/dajbelshaw/extinction-fyi">here</a>.</p>
   <p>🔗 <a href="https://eink.link">Eink.link</a> is a basic, fast-loading website aimed to be used on e-reader web browsers. The code repository can be found <a href="https://github.com/dajbelshaw/einklink">here</a>.</p>
   <hr />
-  <p>⬅️ <a href="/1024B">Back</a></p>
+  <p>⬅️ <a href="../">Back</a></p>
 
 </body></html>
