--- a/projects/index.html
+++ b/projects/index.html
@@ -20,8 +20,11 @@
 <h2>Projects</h2>
   <p>At any given time, I've got a number of side projects on the go to complement my regular work. Here's what I'm working on at the moment.</p>		
   <p>💥 <a href="https://thoughtshrapnel.com">Thought Shrapnel</a> is a monthly email newsletter of everything I've been working on. Until early 2021, I also published original articles there which you can find in the <a href="https://thoughtshrapnel.com/archives">archive</a>.</p>
-  <p>🔥 <a href="https://extinction.fyi">Extinction.fyi</a> is an RSS feed styled as a web page documenting the climate emergency. The code repository can be found <a class="link-1 red" href="https://github.com/dajbelshaw/extinction-fyi">here</a>.</p>
   <p>🔗 <a href="https://eink.link">Eink.link</a> is a basic, fast-loading website aimed to be used on e-reader web browsers. The code repository can be found <a href="https://github.com/dajbelshaw/einklink">here</a>.</p>
+  <p>🖼️ <a href="https://pixelfed.social/c/366562029819518617">(Un)familiar is an art project presenting black and white scenes from everyday life with a small twist...</p>
+  <hr />
+<h3>On hiatus</h3>
+  <p>🔥 <a href="https://extinction.fyi">Extinction.fyi</a> is an RSS feed styled as a web page documenting the climate emergency. The code repository can be found <a class="link-1 red" href="https://github.com/dajbelshaw/extinction-fyi">here</a>.</p>
   <hr />
   <p>⬅️ <a href="../">Back</a></p>
 
