Added privacy.garden and updated 'Retired' section

--- a/projects/index.html
+++ b/projects/index.html
@@ -23,8 +23,10 @@
   <p>🔗 <a href="https://eink.link">Eink.link</a> is a basic, fast-loading website aimed to be used on e-reader web browsers. The code repository can be found <a href="https://github.com/dajbelshaw/einklink">here</a>.</p>
   <p>🖼️ <a href="https://pixelfed.social/c/366562029819518617">(Un)familiar is an art project presenting black and white scenes from everyday life with a small twist...</p>
   <hr />
-<h3>On hiatus</h3>
-  <p>🔥 <a href="https://extinction.fyi">Extinction.fyi</a> is an RSS feed styled as a web page documenting the climate emergency. The code repository can be found <a class="link-1 red" href="https://github.com/dajbelshaw/extinction-fyi">here</a>.</p>
+<h3>Retired</h3>
+  <p>🔥 <a href="https://web.archive.org/web/20211229124136/https://extinction.fyi/">Extinction.fyi</a> was an RSS feed styled as a web page documenting the climate emergency. The code repository can be found <a class="link-1 red" href="https://github.com/dajbelshaw/extinction-fyi">here</a>.</p>
+  <p>🌻 <a href="https://web.archive.org/web/20220118121621/https://privacy.garden/">Privacy.garden</a> was a WordPress-based site which brought together RSS feeds around privacy-related information in a 'river of news' style.</p>
+
   <hr />
   <p>⬅️ <a href="../">Back</a></p>
 
