Testing new structure/format

--- a/cv/index.html
+++ b/cv/index.html
@@ -23,8 +23,9 @@
     <p>PGCE (Secondary History) Durham University (2003-04)</p>
     <p>MA (Modern History) Durham University (2002-03)</p>
     <p>BA Hons. (Philosophy) Universityof Sheffield (1999-2002)</p>
-  <hr>  
-  <h3>Co-founder, We Are Open Co-op (2016-Present)</h3>
+  <hr>
+  <h3>Career history</h3>
+  	<p><strong>Co-founder, We Are Open Co-op (2016-Present)</strong></p>
     <p>Helping organisations work more openly and efficiently. After starting to sub-contract consultancy work, decided to set up a tech co-operative with friends and former Mozilla colleagues. Clients include Creative Commons, Greenpeace, and Red Hat.</p>
   <h3>Consultant, Dynamic Skillset (2015-Present)</h3>
     <p>Set up my own consultancy business and work with a range of organisations around Open Badges, digital/new literacies, and
