--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <head>
 	<meta content="width=device-width,initial-scale=1" name="viewport">
-	<title>Dr. Doug Belshaw | Open Strategist</title>
+	<title>AI Literacy.fyi</title>
 	<link rel="shortcut icon" href="images/ico/favicon.ico">
 	<style>
-		html{overflow:hidden;font:22px sans-serif;padding:5%;background:#81A1C1;color:#fff}
+		html{overflow:hidden;font:22px sans-serif;padding:5%;background:#000000;color:#4AF626}
 		body{max-width:690px;margin:0 auto;line-height:1.5em}
-		a{color:#FFF;background:#5E81AC;text-decoration:none;font-weight:700;border-radius:5px;padding:3px}
-		a:hover{background:#ECEFF4;color:#5E81AC}
-		h2{color:#ECEFF4}
+		a{color:#000000;background:#4AF626;text-decoration:underline;font-weight:700;border-radius:5px;padding:3px}
+		a:hover{background:#000000;color:#4AF626}
+		h2{color:#4AF626}
 		h3{font-weight:500}
 		ul{list-style-type:none;padding-left:0;}
 		li{margin: 0 0 10px 0}
@@ -16,33 +16,29 @@
 		/* Loader */
 		html{overflow:hidden}
 		html.loaded{overflow:auto}
-		html:after{content:"";position:fixed;z-index:1000;top:0;left:0;right:0;bottom:0; background:#81A1C1}
+		html:after{content:"";position:fixed;z-index:1000;top:0;left:0;right:0;bottom:0; background:#000000}
 		html.loaded:after{display:none}
 		body{transition:all .6s cubic-bezier(0.77,0,0.175,1);opacity:0}
 		html.loaded body{opacity:1}
 	</style>
 </head>
 <body>
-<h1>Dr. Doug Belshaw</h1>
+<h1>AI Literacy.fyi</h1>
 <h2>
   <span id="typed"></span>
     <div id="typed-strings">
-      <p>Consultant</p>
-      <p>Keynote speaker</p>
-      <p>Co-op founder</p>
-      <p>Tech sherpa</p>
-      <p>Writer</p>
-      <p>Researcher</p>
-      <p>Leader</p>
-      <p>Open advocate</p>
+      <p>Trustworthy AI</p>
+      <p>Civic responsibility</p>
+      <p>Common good</p>
+      <p>Algorithmic understanding</p>
+      <p>Global Equity</p>
+      <p>Data privacy</p>
+      <p>Inclusive practices</p>
+      <p>Emancipatory literacies</p>
     </div>
 </h2>
   <ul>
-    <li>👋 <a href="about/">About</a>
-    <li>✍️ <a href="https://dougbelshaw.com/blog">Blog</a> | <a href="https://thoughtshrapnel.com">Newsletter</a></li>
-    <li>💬 <a href="http://fosstodon.org/@dajbelshaw">Mastodon</a> | <a href="https://twitter.com/dajbelshaw">Twitter</a></li>
-    <li>🤝 <a href="https://www.linkedin.com/in/dajbelshaw">LinkedIn</a>
-    <li>📨 <a href='m&#97;i&#108;to&#58;%68e&#108;l%6F%&#52;&#48;dy%6Ea%6D%69cski&#108;lse&#116;&#37;2&#69;c&#37;&#54;F%6D'>Email</a></li>
+    <li>🌐 <a href="https://blog.weareopen.coop/ai-literacy-a-cross-sectional-slice-of-new-literacies-1906c8e44abe/">Response to UNESCO Call for Contributions</a>
   </ul>
 <script src="js/main.js"></script>
 </body></html>
