--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 	<title>AI Literacy.fyi</title>
 	<link rel="shortcut icon" href="images/ico/favicon.ico">
 	<style>
-		html{overflow:hidden;font:22px sans-serif;padding:5%;background:#000000;color:#4AF626}
+		html{overflow:hidden;font:22px monospace;padding:5%;background:#000000;color:#4AF626}
 		body{max-width:690px;margin:0 auto;line-height:1.5em}
 		a{color:#000000;background:#4AF626;text-decoration:underline;font-weight:700;border-radius:5px;padding:3px}
 		a:hover{background:#000000;color:#4AF626}
-		h2{color:#4AF626}
+		h2{color:#ffffff}
 		h3{font-weight:500}
 		ul{list-style-type:none;padding-left:0;}
 		li{margin: 0 0 10px 0}
