--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		html{overflow:hidden;font:22px monospace;padding:5%;background:#000000;color:#4AF626}
 		body{max-width:690px;margin:0 auto;line-height:1.5em}
 		a{color:#000000;background:#4AF626;text-decoration:underline;font-weight:700;border-radius:5px;padding:3px}
-		a:hover{background:#000000;color:#4AF626}
+		a:hover{background:#ffffff;color:#000000}
 		h2{color:#ffffff}
 		h3{font-weight:500}
 		ul{list-style-type:none;padding-left:0;}
