--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 	<meta content="width=device-width,initial-scale=1" name="viewport">
 	<title>AI Literacy.fyi</title>
-	<link rel="shortcut icon" href="images/ico/favicon.ico">
+	<link rel="shortcut icon" href="favicon.ico">
 	<style>
 		html{overflow:hidden;font:22px monospace;padding:5%;background:#000000;color:#4AF626}
 		body{max-width:690px;margin:0 auto;line-height:1.5em}
