--- a/index.html
+++ b/index.html
@@ -40,5 +40,7 @@
   <ul>
     <li>🌐 <a href="https://blog.weareopen.coop/ai-literacy-a-cross-sectional-slice-of-new-literacies-1906c8e44abe/">Response to UNESCO Call for Contributions</a>
   </ul>
+<a href="https://weareopen.coop"><img src="/img/wao-white.svg" alt="WAO logo"></a>
+
 <script src="js/main.js"></script>
 </body></html>
