--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	</style>
 </head>
 <body>
-<img src="/img/logo.png" alt="logo" />
+<img src="img/logo.png" alt="logo" />
 <h1>AI Literacy.fyi</h1>
 <h2>
   <span id="typed"></span>
@@ -41,7 +41,7 @@
   <ul>
     <li>🌐 <a href="https://blog.weareopen.coop/ai-literacy-a-cross-sectional-slice-of-new-literacies-1906c8e44abe/">Response to UNESCO Call for Contributions</a>
   </ul>
-<a href="https://weareopen.coop"><img src="/img/wao-white.svg" alt="WAO logo"></a>
+<a href="https://weareopen.coop"><img src="img/wao-white.svg" alt="WAO logo"></a>
 
 <script src="js/main.js"></script>
 </body></html>
