--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
   <ul>
     <li>🌐 <a href="https://blog.weareopen.coop/ai-literacy-a-cross-sectional-slice-of-new-literacies-1906c8e44abe/">Response to UNESCO Call for Contributions</a>
   </ul>
-<img style="padding-top:60;" src="img/wao-white.svg" width="100px" alt="WAO logo">
+	<br><br><br>
+<img src="img/wao-white.svg" width="100px" alt="WAO logo">
 
 <script src="js/main.js"></script>
 </body></html>
