--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
     </div>
 </h2>
   <ul>
-    <li>🌐 <a href="https://blog.weareopen.coop/ai-literacy-a-cross-sectional-slice-of-new-literacies-1906c8e44abe/">Response to UNESCO Call for Contributions</a>
+    <li>🌐 <a href="https://blog.weareopen.coop/ai-literacy-a-cross-sectional-slice-of-new-literacies-1906c8e44abe/">Response to UNESCO Call for Contributions</a></li>
+    <li>📚 <a href="library.html">Library</li>
   </ul>
 	<br><br>
 <img src="img/wao-white.svg" width="75px" alt="WAO logo">
