--- a/library.html
+++ b/library.html
@@ -30,12 +30,13 @@
   <ul>
     <li>Gillani, N., Eynon, R., Chiabaut, C., & Finkel, K. (2023). Unpacking the “Black Box” of AI in Education. Educational Technology & Society, 26(1), 99–111.</li>
     <li>Huang, X., Zou, D., Cheng, G., Chen, X., & Xie, H. (2023). Trends, Research Issues and Applications of Artificial Intelligence in Language Education. Educational Technology & Society, 26(1), 112–131.</li>
-    <li>Isztin, P. (2023). A Note on Human Capital, the Division of Labor, and Artificial Intelligence</li>
+    <li>Isztin, P. (2023). A Note on Human Capital, the Division of Labor, and Artificial Intelligence.</li>
     <li>Kong, S.-C., Cheung, W. M.-Y., & Zhang, G. (2023). Evaluating an Artificial Intelligence Literacy Programme for Developing University Students’ Conceptual Understanding, Literacy, Empowerment and Ethical Awareness. Educational Technology & Society, 26(1), 16–30.</li>
         <li>Ng, Tsz Kit & Chu, Samuel & Shen, Maggie & Leung, Jac. (2021). AI Literacy: Definition, Teaching, Evaluation and Ethical Issues.</li> 
     <li>Ng, Tsz Kit & Chu, Samuel & Shen, Maggie & Leung, Jac. (2022). AI Literacy in K-16 Classrooms. New York. Springer.</li>
     <li>OECD (2023), OECD Employment Outlook 2023: Artificial Intelligence and the Labour Market, OECD Publishing, Paris, https://doi.org/10.1787/08785bba-en.</li>
   </ul>
+	<hr>
   <p>Thanks to Jamie Allen, Ian O'Byrne, and Tom Salmon for their assistance.</p>
 	<br><br>
 <img src="img/wao-white.svg" width="75px" alt="WAO logo">
