--- a/library.html
+++ b/library.html
@@ -26,7 +26,8 @@
 <img src="img/logo.png" alt="logo" />
 <h1>AI Literacy.fyi</h1>
 <h2>📚 Library</h2>
-  <p>What we're reading:</p>
+<p>What we're reading...</p>
+<h3>Academic articles</h3>	
   <ul>
     <li>Gillani, N., Eynon, R., Chiabaut, C., & Finkel, K. (2023). Unpacking the “Black Box” of AI in Education. Educational Technology & Society, 26(1), 99–111.</li>
     <li>Huang, X., Zou, D., Cheng, G., Chen, X., & Xie, H. (2023). Trends, Research Issues and Applications of Artificial Intelligence in Language Education. Educational Technology & Society, 26(1), 112–131.</li>
@@ -36,6 +37,16 @@
     <li>Ng, Tsz Kit & Chu, Samuel & Shen, Maggie & Leung, Jac. (2022). AI Literacy in K-16 Classrooms. New York. Springer.</li>
     <li>OECD (2023), OECD Employment Outlook 2023: Artificial Intelligence and the Labour Market, OECD Publishing, Paris, https://doi.org/10.1787/08785bba-en.</li>
   </ul>
+<h3>International bodies</h3>
+	<ul>
+		<li><a href="https://unesdoc.unesco.org/ark:/48223/pf0000376709">AI and education: guidance for policy-makers</a>a> (UNESCO, 2021)</li>
+		<li>Artificial Intellience: A critical view through the lens of human rights, democracy, and the rule of law (Council of Europe, 2022)</li>
+		<li><a href="https://unesdoc.unesco.org/ark:/48223/pf0000385082/PDF/385082eng.pdf.multi.page=4">UNESCO’s Recommendation on the Ethics of Artificial Intelligence (UNESCO, 2021)</a></li>
+	</ul>
+	<h3>Initiatives</h3>
+	<ul>
+		<li><a href="https://raise.mit.edu/">RAISE: Responsible AI for Social Empowerment and Education (MIT)</a></li>
+	</ul>
 	<hr>
   <p>Thanks to Jamie Allen, Ian O'Byrne, and Tom Salmon for their assistance.</p>
 	<br><br>
