--- a/library.html
+++ b/library.html
@@ -6,6 +6,7 @@
 	<style>
 		html{overflow:hidden;font:22px monospace;padding:5%;background:#000000;color:#4AF626}
 		body{max-width:690px;margin:0 auto;line-height:1.5em}
+		p {padding-bottom:10;}
 		a{background:#000000;color:#4AF626;text-decoration:underline;font-weight:700;border-radius:5px;padding:3px}
 		a:hover{background:#4AF626;color:#000000}
 		h2{color:#ffffff}
