--- a/library.html
+++ b/library.html
@@ -9,7 +9,7 @@
 		p {padding-bottom:10;}
 		a{background:#000000;color:#4AF626;text-decoration:underline;font-weight:700;border-radius:5px;padding:3px}
 		a:hover{background:#4AF626;color:#000000}
-		h2{color:#ffffff}
+		h2,h3{color:#ffffff}
 		h3{font-weight:500}
 		ul{list-style-type:none;padding-left:0;}
 		li{margin: 0 0 10px 0}
@@ -38,12 +38,14 @@
     <li>Ng, Tsz Kit & Chu, Samuel & Shen, Maggie & Leung, Jac. (2022). AI Literacy in K-16 Classrooms. New York. Springer.</li>
     <li>OECD (2023), OECD Employment Outlook 2023: Artificial Intelligence and the Labour Market, OECD Publishing, Paris, https://doi.org/10.1787/08785bba-en.</li>
   </ul>
+	<hr>
 <h3>International bodies</h3>
 	<ul>
 		<li><a href="https://unesdoc.unesco.org/ark:/48223/pf0000376709">AI and education: guidance for policy-makers</a>a> (UNESCO, 2021)</li>
 		<li>Artificial Intellience: A critical view through the lens of human rights, democracy, and the rule of law (Council of Europe, 2022)</li>
 		<li><a href="https://unesdoc.unesco.org/ark:/48223/pf0000385082/PDF/385082eng.pdf.multi.page=4">UNESCO’s Recommendation on the Ethics of Artificial Intelligence (UNESCO, 2021)</a></li>
 	</ul>
+	<hr>
 	<h3>Initiatives</h3>
 	<ul>
 		<li><a href="https://raise.mit.edu/">RAISE: Responsible AI for Social Empowerment and Education (MIT)</a></li>
