--- a/library.html
+++ b/library.html
@@ -24,7 +24,7 @@
 	</style>
 </head>
 <body>
-<img src="img/logo.png" alt="logo" />
+<a href="/" ><img src="img/logo.png" alt="logo" /></a>a>
 <h1>AI Literacy.fyi</h1>
 <h2>📚 Library</h2>
 <p>What we're reading...</p>
