--- a/library.html
+++ b/library.html
@@ -30,13 +30,13 @@
 <p>What we're reading...</p>
 <h3>Academic articles</h3>	
   <ul>
-    <li>Gillani, N., Eynon, R., Chiabaut, C., & Finkel, K. (2023). Unpacking the “Black Box” of AI in Education. Educational Technology & Society, 26(1), 99–111. https://doi.org/10.30191/ETS.202301_26(1).0008</li>
-    <li>Huang, X., Zou, D., Cheng, G., Chen, X., & Xie, H. (2023). Trends, Research Issues and Applications of Artificial Intelligence in Language Education. Educational Technology & Society, 26(1), 112–131. https://doi.org/10.30191/ETS.202301_26(1).0009</li>
-    <li>Isztin, P. (2023). A Note on Human Capital, the Division of Labor, and Artificial Intelligence. (<a href="https://drive.google.com/file/d/18b-TlcJgaKPYPSeQtuN1d67-C0HiS6YH/view">link</a>a>)</li>
-    <li>Kong, S.-C., Cheung, W. M.-Y., & Zhang, G. (2023). Evaluating an Artificial Intelligence Literacy Programme for Developing University Students’ Conceptual Understanding, Literacy, Empowerment and Ethical Awareness. Educational Technology & Society, 26(1), 16–30. https://doi.org/10.1007/s10639-022-11408-7</li>
-        <li>Ng, Tsz Kit & Chu, Samuel & Shen, Maggie & Leung, Jac. (2021). AI Literacy: Definition, Teaching, Evaluation and Ethical Issues. https://doi.org/10.1002/pra2.487</li> 
-    <li>Ng, Tsz Kit & Chu, Samuel & Shen, Maggie & Leung, Jac. (2022). AI Literacy in K-16 Classrooms. New York. Springer. https://doi.org/10.1007/978-3-031-18880-0</li>
-    <li>OECD (2023), OECD Employment Outlook 2023: Artificial Intelligence and the Labour Market, OECD Publishing, Paris, https://doi.org/10.1787/08785bba-en.</li>
+    <li>Gillani, N., Eynon, R., Chiabaut, C., & Finkel, K. (2023). Unpacking the “Black Box” of AI in Education. Educational Technology & Society, 26(1), 99–111. <a href="https://doi.org/10.30191/ETS.202301_26(1).0008">https://doi.org/10.30191/ETS.202301_26(1).0008</a></li>
+    <li>Huang, X., Zou, D., Cheng, G., Chen, X., & Xie, H. (2023). Trends, Research Issues and Applications of Artificial Intelligence in Language Education. Educational Technology & Society, 26(1), 112–131. <a href="https://doi.org/10.30191/ETS.202301_26(1).0009">https://doi.org/10.30191/ETS.202301_26(1).0009</a></li>
+    <li>Isztin, P. (2023). A Note on Human Capital, the Division of Labor, and Artificial Intelligence. (<a href="https://drive.google.com/file/d/18b-TlcJgaKPYPSeQtuN1d67-C0HiS6YH/view">link</a>)</li>
+    <li>Kong, S.-C., Cheung, W. M.-Y., & Zhang, G. (2023). Evaluating an Artificial Intelligence Literacy Programme for Developing University Students’ Conceptual Understanding, Literacy, Empowerment and Ethical Awareness. Educational Technology & Society, 26(1), 16–30. <a href="https://doi.org/10.1007/s10639-022-11408-7">https://doi.org/10.1007/s10639-022-11408-7</a></li>
+        <li>Ng, Tsz Kit & Chu, Samuel & Shen, Maggie & Leung, Jac. (2021). AI Literacy: Definition, Teaching, Evaluation and Ethical Issues. <a href="https://doi.org/10.1002/pra2.487">https://doi.org/10.1002/pra2.487</a></li> 
+    <li>Ng, Tsz Kit & Chu, Samuel & Shen, Maggie & Leung, Jac. (2022). AI Literacy in K-16 Classrooms. New York. Springer. <a href="https://doi.org/10.1007/978-3-031-18880-0">https://doi.org/10.1007/978-3-031-18880-0</a></li>
+    <li>OECD (2023), OECD Employment Outlook 2023: Artificial Intelligence and the Labour Market, OECD Publishing, Paris, <a href="https://doi.org/10.1787/08785bba-en">https://doi.org/10.1787/08785bba-en</a></li>
   </ul>
 	<hr>
 <h3>International bodies</h3>
