--- a/library.html
+++ b/library.html
@@ -41,8 +41,8 @@
 	<hr>
 <h3>International bodies</h3>
 	<ul>
-		<li><a href="https://unesdoc.unesco.org/ark:/48223/pf0000376709">AI and education: guidance for policy-makers</a>a> (UNESCO, 2021)</li>
-		<li><a href="https://book.coe.int/en/education-policy/11333-artificial-intelligence-and-education-a-critical-view-through-the-lens-of-human-rights-democracy-and-the-rule-of-law.html">Artificial Intellience: A critical view through the lens of human rights, democracy, and the rule of law (Council of Europe, 2022)</a>a></li>
+		<li><a href="https://unesdoc.unesco.org/ark:/48223/pf0000376709">AI and education: guidance for policy-makers</a> (UNESCO, 2021)</li>
+		<li><a href="https://book.coe.int/en/education-policy/11333-artificial-intelligence-and-education-a-critical-view-through-the-lens-of-human-rights-democracy-and-the-rule-of-law.html">Artificial Intellience: A critical view through the lens of human rights, democracy, and the rule of law (Council of Europe, 2022)</a></li>
 		<li><a href="https://unesdoc.unesco.org/ark:/48223/pf0000385082/PDF/385082eng.pdf.multi.page=4">UNESCO’s Recommendation on the Ethics of Artificial Intelligence (UNESCO, 2021)</a></li>
 	</ul>
 	<hr>
