--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
   <ul>
     <li>🌐 <a href="https://blog.weareopen.coop/ai-literacy-a-cross-sectional-slice-of-new-literacies-1906c8e44abe/">Response to UNESCO Call for Contributions</a></li>
     <li>📚 <a href="library.html">Library</li>
+    <li>🎈 <a href="examples.html">Examples</li>
   </ul>
 	<br>
 <img src="img/wao-white.svg" width="75px" alt="WAO logo">
