--- a/examples.html
+++ b/examples.html
@@ -28,7 +28,10 @@
 <h1>AI Literacy.fyi</h1>
 <h2>🎈 Examples</h2>
 <p>Useful multimedia resources, some serious, some fun.</p>
+<!-- France women football -->
   <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/QVNZRHIZVL8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<!-- TED-ED Things are going to get weird -->	
+  <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/RzkD_rTEBYs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 	<br><br>
 <img src="img/wao-white.svg" width="75px" alt="WAO logo">
 
