--- a/examples.html
+++ b/examples.html
@@ -33,7 +33,7 @@
 <!-- TED-ED Things are going to get weird -->	
   <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/RzkD_rTEBYs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 	<br><br>
-<img src="img/wao-white.svg" width="75px" alt="WAO logo">
+<a href="https://weareopen.coop" text-decoration: none;"><img src="img/wao-white.svg" width="75px" alt="WAO logo"></a>
 
 <script src="js/main.js"></script>
 </body></html>
