--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <li>🎈 <a href="examples.html">Examples</a></li>
   </ul>
 	<br>
-<img src="img/wao-white.svg" width="75px" alt="WAO logo">
-
+<a href="https://weareopen.coop" text-decoration: none;"><img src="img/wao-white.svg" width="75px" alt="WAO logo"></a>
+	
 <script src="js/main.js"></script>
 </body></html>
