--- a/library.html
+++ b/library.html
@@ -53,7 +53,7 @@
 	<hr>
   <p>Thanks to Jamie Allen, Ian O'Byrne, and Tom Salmon for their assistance.</p>
 	<br><br>
-<img src="img/wao-white.svg" width="75px" alt="WAO logo">
-
+<a href="https://weareopen.coop" text-decoration: none;"><img src="img/wao-white.svg" width="75px" alt="WAO logo"></a>
+	
 <script src="js/main.js"></script>
 </body></html>
