--- a/library.html
+++ b/library.html
@@ -9,7 +9,7 @@
 		p {padding-bottom:10;}
 		a{background:#000000;color:#4AF626;text-decoration:underline;font-weight:700;border-radius:5px;padding:3px}
 		a:hover{background:#4AF626;color:#000000}
-		h2,h3{color:#ffffff}
+		h2,h3,h4{color:#ffffff}
 		h3{font-weight:500}
 		ul{list-style-type:none;padding-left:0;}
 		li{margin: 0 0 10px 0}
