Added meta tags

--- a/examples.html
+++ b/examples.html
@@ -22,7 +22,26 @@
 		body{transition:all .6s cubic-bezier(0.77,0,0.175,1);opacity:0}
 		html.loaded body{opacity:1}
 	</style>
+	<!-- Primary Meta Tags -->
+	<title>AI Literacy.fyi</title>
+	<meta name="title" content="AI Literacy.fyi" />
+	<meta name="description" content="Curated links to deepen your AI knowledge and understanding." />
+
+	<!-- Open Graph / Facebook -->
+	<meta property="og:type" content="website" />
+	<meta property="og:url" content="https://metatags.io/" />
+	<meta property="og:title" content="AI Literacy.fyi" />
+	<meta property="og:description" content="Curated links to deepen your AI knowledge and understanding." />
+	<meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+
+	<!-- Twitter -->
+	<meta property="twitter:card" content="summary_large_image" />
+	<meta property="twitter:url" content="https://metatags.io/" />
+	<meta property="twitter:title" content="AI Literacy.fyi" />
+	<meta property="twitter:description" content="Curated links to deepen your AI knowledge and understanding." />
+	<meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
 </head>
+
 <body>
 <a href="/" ><img src="img/logo.png" alt="logo" /></a>
 <h1>AI Literacy.fyi</h1>
