Created definitions page, updated index

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		a:hover{background:#4AF626;color:#000000}
 		h2{color:#ffffff}
 		h3{font-weight:500}
+		hr{margin 1.5em 0 1.5em 0;}
 		ul{list-style-type:none;padding-left:0;}
 		li{margin: 0 0 40px 0}
 		img{border-radius:15px;max-width:200px}
@@ -31,14 +32,14 @@
 	<meta property="og:url" content="https://metatags.io/" />
 	<meta property="og:title" content="AI Literacy.fyi" />
 	<meta property="og:description" content="Curated links to deepen your AI knowledge and understanding." />
-	<meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+	<meta property="og:image" content="https://ailiteracy.fyi/img/logo.png" />
 
 	<!-- Twitter -->
 	<meta property="twitter:card" content="summary_large_image" />
 	<meta property="twitter:url" content="https://metatags.io/" />
 	<meta property="twitter:title" content="AI Literacy.fyi" />
 	<meta property="twitter:description" content="Curated links to deepen your AI knowledge and understanding." />
-	<meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+	<meta property="twitter:image" content="https://ailiteracy.fyi/img/logo.png" />
 </head>
 
 <body>
@@ -57,14 +58,18 @@
       <p>Emancipatory literacies</p>
     </div>
 </h2>
+<br>
   <ul>
+	<li>🤔 <a href="definitions.html">Definitions</a></li>
+	<li>📚 <a href="library.html">Library</a></li>
+    <li>🎈 <a href="examples.html">Examples</a></li>
+  </ul>
+<hr />
+<ul style="font-size:0.8em;">
 	<li>🎙️ <a href="https://wiobyrne.com/navigating-the-future-of-media-and-information-literacy/">Navigating the Future of Media and Information Literacy: A Transdisciplinary Approach</a></li>
 	<li>📝 <a href="https://wiobyrne.com/educations-essential-role-in-the-ai-revolution/">Response to positioning paper for the UN Internet Governance Forum</a></li>
     <li>🌐 <a href="https://blog.weareopen.coop/ai-literacy-a-cross-sectional-slice-of-new-literacies-1906c8e44abe/">Response to UNESCO Call for Contributions</a></li>
-    <li>📚 <a href="library.html">Library</a></li>
-    <li>🎈 <a href="examples.html">Examples</a></li>
-  </ul>
-	<br>
+</ul>
 <a href="https://weareopen.coop" text-decoration: none;"><img src="img/wao-white.svg" width="75px" alt="WAO logo"></a>
 	
 <script src="js/main.js"></script>
