--- a/examples.html
+++ b/examples.html
@@ -32,14 +32,14 @@
 	<meta property="og:url" content="https://metatags.io/" />
 	<meta property="og:title" content="AI Literacy.fyi" />
 	<meta property="og:description" content="Curated links to deepen your AI knowledge and understanding." />
-	<meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+	<meta property="og:image" content="https://ailiteracy.fyi/img/logo.png" />
 
 	<!-- Twitter -->
 	<meta property="twitter:card" content="summary_large_image" />
 	<meta property="twitter:url" content="https://metatags.io/" />
 	<meta property="twitter:title" content="AI Literacy.fyi" />
 	<meta property="twitter:description" content="Curated links to deepen your AI knowledge and understanding." />
-	<meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+	<meta property="twitter:image" content="https://ailiteracy.fyi/img/logo.png" />
 </head>
 
 <body>
