--- a/definitions.html
+++ b/definitions.html
@@ -87,7 +87,7 @@
 <h3>References</h3>
 <ul>
 	<li>
-		Long, D. and Magerko, B., 2020, April. What is AI literacy? Competencies and design considerations. In <em><Proceedings of the 2020 CHI conference on human factors in computing systems</em> (pp. 1-16).
+		Long, D. and Magerko, B., 2020, April. What is AI literacy? Competencies and design considerations. In Proceedings of the 2020 CHI conference on human factors in computing systems (pp. 1-16).
 	</li>
 </ul>
 <script src="js/main.js"></script>
