added nysci ai literacy conference site

--- a/definitions.html
+++ b/definitions.html
@@ -54,6 +54,16 @@
 <p><em>Note: Literacies are complex and multifaceted. Looking for an introduction to AI to help you be able to help others? Check out the University of Helsinki's free <a href="https://www.elementsofai.com/">Elements of AI</a> course.</em></p>
 
 <hr />
+<img src="img/NYSCI-agency.jpeg" alt="NYSCI-agency" width="" height="" >
+<p>
+	<blockquote>
+		"While there have been numerous conferences focused on AI education in formal settings, our focus is specifically on a human-centered approach that prioritizes the needs of underserved communities, as well as the responsibility and agency humans possess in the "care and feeding" of AI systems. This entails not only promoting people's conceptual understanding of AI and its workings, but also developing critical AI literacy understandings and skills that empower individuals to recognize the role we all play in AI systems that impact nearly every aspect of daily life." 
+		
+		<span>(<a href="https://sites.google.com/nysci.org/nysci-ai-literacy-conference/">NYSCI AI Literacy Conference</a>)</span>
+	</blockquote>
+</p>
+
+<hr />
 
 <img src="img/ai-literacy-ai-unplugged.png" alt="AI Unplugged's AI Literacy competencies and design considerations" />
 <p>
